-improved the semantic search speed by indexing the fields in the database -added lazy load in pages for fast initial loading times -staff page in progress

--- a/papers/templates/layouts/base.html
+++ b/papers/templates/layouts/base.html
@@ -5,7 +5,7 @@
   <title>{% block title %}Academic Repo{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- 🌙 Dark Mode Preload Script (prevents white flash) -->
+  <!-- 🌙 Dark Mode Preload Script -->
   <script>
     if (
       localStorage.getItem("color-theme") === "dark" ||
@@ -17,6 +17,7 @@
       document.documentElement.classList.remove("dark");
     }
   </script>
+
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -135,7 +136,7 @@
       };
     }
   </script>
-
+  
   {% block extra_scripts %}{% endblock %}
 </body>
 </html>
